# Rust-Merkle-ZKP

circuits/: InsertLeaf.circom  MerkleTree.circom  MerkleTreeUpdater.circom  PartialReveal.circom
ddid_solana_program/src/: lib.rs
derive_macro_token_stream/: Cargo.toml
derive_macro_token_stream/merkle_tree/: Cargo.toml
derive_macro_token_stream/merkle_tree/src/: lib.rs  merkle_tree.rs
derive_macro_token_stream/merkle_tree_storage/: Cargo.toml
derive_macro_token_stream/merkle_tree_storage/src/: lib.rs
derive_macro_token_stream/src/: main.rs  test.rs
derive_macro_token_stream/tree_proc_macros/: Cargo.toml
derive_macro_token_stream/tree_proc_macros/src/: lib.rs
merkle_root_hash_solana_program/src/: lib.rs
merkle_root_hash_solana_program/tests/: native.test.ts
merkletree_generation/: Cargo.toml
merkletree_generation/src/: main.rs
migrations/: 20250107035322_create_coinid_table.down.sql  20250107035322_create_coinid_table.up.sql  20250107035403_create_merchantjoinid_table.down.sql  20250107035403_create_merchantjoinid_table.up.sql  20250107035410_create_merchantrecord_table.down.sql  20250107035410_create_merchantrecord_table.up.sql  20250107035431_create_merchantdata_table.down.sql  20250107035431_create_merchantdata_table.up.sql  20250107035456_create_coinidtree_table.down.sql  20250107035456_create_coinidtree_table.up.sql  20250107035507_create_merchantjoinidtree_table.down.sql  20250107035507_create_merchantjoinidtree_table.up.sql  20250107035517_create_merchantrecordtree_table.down.sql  20250107035517_create_merchantrecordtree_table.up.sql
(+18 files in other folders)
